fix: replace getFirst/getLast with JDK 17-compatible get() calls